Update swagger and add setup folder (#85)
